blue-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
        - name: http-echo
          image: docker.io/hashicorp/http-echo:latest
          args:
            - "-listen=:8080"
            - "-text=I am blue"
          ports:
            - containerPort: 8080
