green-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
        - name: http-echo
          image: docker.io/hashicorp/http-echo:latest
          args:
            - "-listen=:8081"
            - "-text=I am green"
          ports:
            - containerPort: 8081
