blue-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: opcito-assignment.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-app
            port:
              number: 8080
